# TurtleRevolve

./: .gitignore  LICENSE  README.md  buildspec.yml  roboMakerSettings.json
robot_ws/src/robot_app/: CMakeLists.txt  package.xml
robot_ws/src/robot_app/launch/: revolve.launch
robot_ws/src/robot_app/scripts/: revolve.py
robot_ws/src/turtlebot_revolve/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/turtlebot_revolve/launch/: revolve.launch
robot_ws/src/turtlebot_revolve/scripts/: revolve.py
simulation_ws/src/simulation_app/: package.xml
simulation_ws/src/simulation_app/launch/: example.launch  spawn_turtlebot.launch
simulation_ws/src/simulation_app/worlds/: example.world
simulation_ws/src/turtle_simulate/: CMakeLists.txt  package.xml
simulation_ws/src/turtle_simulate/launch/: example.launch
