<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_revolve</name>
  <version>1.0.0</version>
  <description>
	  A package to test CI/CD pipline of AWS  
  </description>
  <license>BSD</license>
  <author email="saurabh.dxt21@gmail.com">Saurabh Dixit</author>
  <maintainer email="saurabh.dxt21@gmail.com">Saurabh Dixit</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
</package>
