<?xml version="1.0"?>
<package format="2">
  <name>turtle_simulate</name>
  <version>1.0.0</version>
  <description>
    A package to test CI/CD pipeline in AWS
  </description>
  <license>BSD</license>
  <author email="saurabh.dxt21@gmail.com">Saurabh Dixit</author>
  <maintainer email="saurabh.dxt21@gmail.com">Saurabh Dixit</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_simulations</depend>
  <exec_depend>gazebo</exec_depend>
</package>
